--- a/natanael.html
+++ b/natanael.html
@@ -1,1 +1,40 @@
 
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Natanael Cano - Corridos Tumbados</title>
+    <link rel="stylesheet" href="web.css">
+</head>
+<body>
+
+<header>
+    <h1 class="titulo-sitio">Natanael Cano</h1>
+</header>
+
+<section class="contenido">
+    <h2>Información sobre Natanael Cano</h2>
+    <p>Natanael Cano es un cantante mexicano y uno de los máximos exponentes de los corridos tumbados. Combinando trap, regional y norteño, ha marcado una nueva etapa en la música mexicana urbana.</p>
+    
+    <h2>Álbumes destacados</h2>
+    <ul>
+        <li>Todo Es Diferente (2019)</li>
+        <li>Corridos Tumbados (2019)</li>
+        <li>Las Torres 3 (2023)</li>
+        <li>NataKong (2022)</li>
+    </ul>
+
+    <h2>Redes Sociales</h2>
+    <ul>
+        <li><a href="https://www.instagram.com/natanael_cano" target="_blank">Instagram</a></li>
+        <li><a href="https://twitter.com/natanaelc" target="_blank">Twitter</a></li>
+        <li><a href="https://www.youtube.com/c/NatanaelCano" target="_blank">YouTube</a></li>
+    </ul>
+</section>
+
+<footer>
+    <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
+</footer>
+
+</body>
+</html>
