--- a/gabito.html
+++ b/gabito.html
@@ -1,1 +1,38 @@
 
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gabito Ballesteros - Corridos Tumbados</title>
+    <link rel="stylesheet" href="web.css">
+</head>
+<body>
+
+<header>
+    <h1 class="titulo-sitio">Gabito Ballesteros</h1>
+</header>
+
+<section class="contenido">
+    <h2>Información sobre Gabito Ballesteros</h2>
+    <p>Gabito Ballesteros es un joven artista que se ha ganado un lugar en la escena de los corridos tumbados con su estilo relajado, letras pegajosas y colaboraciones con grandes nombres como Natanael Cano y Peso Pluma.</p>
+    
+    <h2>Álbumes destacados</h2>
+    <ul>
+        <li>Del Barrio Hasta Aquí (2021)</li>
+        <li>Corridos y Relax (2022)</li>
+        <li>Éxitos Tumbados (2023)</li>
+    </ul>
+
+    <h2>Redes Sociales</h2>
+    <ul>
+        <li><a href="https://www.instagram.com/gabitoballesteros" target="_blank">Instagram</a></li>
+        <li><a href="https://www.youtube.com/@GabitoBallesteros" target="_blank">YouTube</a></li>
+    </ul>
+</section>
+
+<footer>
+    <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
+</footer>
+
+</body>
+</html>
