--- a/junior.html
+++ b/junior.html
@@ -1,1 +1,38 @@
 
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Junior H - Corridos Tumbados</title>
+    <link rel="stylesheet" href="web.css">
+</head>
+<body>
+
+<header>
+    <h1 class="titulo-sitio">Junior H</h1>
+</header>
+
+<section class="contenido">
+    <h2>Información sobre Junior H</h2>
+    <p>Junior H es una de las voces más representativas de los corridos tumbados, con un estilo melancólico y relajado. Su música ha conectado con miles de jóvenes que buscan algo fresco y real en el género.</p>
+    
+    <h2>Álbumes destacados</h2>
+    <ul>
+        <li>Atrapado en un Sueño (2020)</li>
+        <li>Mi Vida en un Cigarro 2 (2021)</li>
+        <li>$ad Boyz 4 Life II (2022)</li>
+    </ul>
+
+    <h2>Redes Sociales</h2>
+    <ul>
+        <li><a href="https://www.instagram.com/juniorh" target="_blank">Instagram</a></li>
+        <li><a href="https://www.youtube.com/@JuniorH" target="_blank">YouTube</a></li>
+    </ul>
+</section>
+
+<footer>
+    <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
+</footer>
+
+</body>
+</html>
