--- a/tito.html
+++ b/tito.html
@@ -1,1 +1,37 @@
 
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tito Doble P - Corridos Tumbados</title>
+    <link rel="stylesheet" href="web.css">
+</head>
+<body>
+
+<header>
+    <h1 class="titulo-sitio">Tito Doble P</h1>
+</header>
+
+<section class="contenido">
+    <h2>Información sobre Tito Doble P</h2>
+    <p>Tito Doble P es uno de los nuevos talentos del movimiento, destacando por sus letras sinceras y su estilo auténtico. Ha ganado seguidores gracias a sus colaboraciones con otros exponentes de los corridos tumbados.</p>
+    
+    <h2>Álbumes destacados</h2>
+    <ul>
+        <li>Tumbados y Firmes (2023)</li>
+        <li>Con Estilo Doble P (2024)</li>
+    </ul>
+
+    <h2>Redes Sociales</h2>
+    <ul>
+        <li><a href="https://www.instagram.com/titodoblepp" target="_blank">Instagram</a></li>
+        <li><a href="https://www.youtube.com/@TitoDobleP" target="_blank">YouTube</a></li>
+    </ul>
+</section>
+
+<footer>
+    <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
+</footer>
+
+</body>
+</html>
