--- a/gabito.html
+++ b/gabito.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabito Ballesteros - Corridos Tumbados</title>
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="gabito.css">
 </head>
 <body>
 
