--- a/tito.html
+++ b/tito.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tito Doble P - Corridos Tumbados</title>
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="tito.css">
 </head>
 <body>
 
