--- a/natanael.html
+++ b/natanael.html
@@ -13,22 +13,40 @@
 </header>
 
 <section class="contenido">
-    <h2>Información sobre Natanael Cano</h2>
-    <p>Natanael Cano es un cantante mexicano y uno de los máximos exponentes de los corridos tumbados. Combinando trap, regional y norteño, ha marcado una nueva etapa en la música mexicana urbana.</p>
-    
+    <h2>¿Quién es Natanael Cano?</h2>
+    <img src="imagenes/natanael-cano.jpg" alt="Natanael Cano" style="width:100%; max-width:600px; display:block; margin:auto;">
+    <p>Natanael Cano es un cantante y compositor mexicano, pionero de los "corridos tumbados". Nacido en Hermosillo, Sonora, en 2001, su música combina sonidos tradicionales del regional mexicano con elementos urbanos como el trap y hip-hop, lo que ha revolucionado la industria y abierto camino a una nueva generación de artistas.</p>
+
     <h2>Álbumes destacados</h2>
     <ul>
-        <li>Todo Es Diferente (2019)</li>
-        <li>Corridos Tumbados (2019)</li>
-        <li>Las Torres 3 (2023)</li>
-        <li>NataKong (2022)</li>
+        <li><strong>Todo Es Diferente</strong> (2019)</li>
+        <li><strong>Corridos Tumbados</strong> (2019)</li>
+        <li><strong>Las Torres 3</strong> (2023)</li>
+        <li><strong>NataKong</strong> (2022)</li>
+        <li><strong>AMG</strong> (2022) — colaboración con Peso Pluma y Gabito Ballesteros</li>
     </ul>
 
-    <h2>Redes Sociales</h2>
+    <h2>Canciones populares</h2>
+    <ol>
+        <li><em>Amor Tumbado</em></li>
+        <li><em>El Drip</em></li>
+        <li><em>Arriba</em></li>
+        <li><em>PRC</em> (con Peso Pluma)</li>
+        <li><em>AMG</em></li>
+    </ol>
+
+    <h2>Estilo y legado</h2>
+    <p>El estilo de Natanael Cano se caracteriza por fusionar guitarras sierreñas con ritmos urbanos. Sus letras hablan de la vida cotidiana, ambición, lujos y también de las calles. Es considerado un pionero de su género y ha sido influencia directa en la carrera de artistas como Junior H, Ovi y Peso Pluma.</p>
+
+    <img src="imagenes/concierto-natanael.jpg" alt="Natanael Cano en concierto" style="width:100%; max-width:600px; display:block; margin:auto; margin-top:15px;">
+
+    <h2>Redes Sociales Oficiales</h2>
     <ul>
         <li><a href="https://www.instagram.com/natanael_cano" target="_blank">Instagram</a></li>
         <li><a href="https://twitter.com/natanaelc" target="_blank">Twitter</a></li>
         <li><a href="https://www.youtube.com/c/NatanaelCano" target="_blank">YouTube</a></li>
+        <li><a href="https://www.facebook.com/NatanaelCanoOficial" target="_blank">Facebook</a></li>
+        <li><a href="https://open.spotify.com/artist/1xK59OXxi2ZgFJYvRQwrpT" target="_blank">Spotify</a></li>
     </ul>
 </section>
 
