--- a/natanael.html
+++ b/natanael.html
@@ -14,7 +14,7 @@
 
 <section class="contenido">
     <h2>¿Quién es Natanael Cano?</h2>
-    <img src="imagenes/natanael-cano.jpg" alt="Natanael Cano" style="width:100%; max-width:600px; display:block; margin:auto;">
+    <img src="fd3e9c4b1f556b61a53a59ad157a1691.jpg" alt="Natanael Cano" style="width:100%; max-width:600px; display:block; margin:auto;">
     <p>Natanael Cano es un cantante y compositor mexicano, pionero de los "corridos tumbados". Nacido en Hermosillo, Sonora, en 2001, su música combina sonidos tradicionales del regional mexicano con elementos urbanos como el trap y hip-hop, lo que ha revolucionado la industria y abierto camino a una nueva generación de artistas.</p>
 
     <h2>Álbumes destacados</h2>
