--- a/gabito.html
+++ b/gabito.html
@@ -1,4 +1,5 @@
 
+
 <html>
 <head>
     <meta charset="UTF-8">
@@ -14,8 +15,10 @@
 
 <section class="contenido">
     <h2>Información sobre Gabito Ballesteros</h2>
-    <p>Gabito Ballesteros es un joven artista que se ha ganado un lugar en la escena de los corridos tumbados con su estilo relajado, letras pegajosas y colaboraciones con grandes nombres como Natanael Cano y Peso Pluma.</p>
-    
+    <p>Gabito Ballesteros es un joven artista originario de Sonora, México, que ha destacado en el mundo de los corridos tumbados. Con su estilo relajado, letras pegajosas y colaboraciones con grandes exponentes del género como Natanael Cano, Peso Pluma y Junior H, ha logrado conectar con una nueva generación de oyentes que buscan un sonido fresco y auténtico.</p>
+
+    <img src="https://example.com/gabito-foto1.jpg" alt="Gabito Ballesteros en concierto" style="width:100%; max-width:600px; display:block; margin:20px auto;">
+
     <h2>Álbumes destacados</h2>
     <ul>
         <li>Del Barrio Hasta Aquí (2021)</li>
@@ -23,10 +26,25 @@
         <li>Éxitos Tumbados (2023)</li>
     </ul>
 
+    <h2>Éxitos populares</h2>
+    <ol>
+        <li>LOV3</li>
+        <li>El Tsurito (ft. Peso Pluma)</li>
+        <li>Aquí Seguimos</li>
+    </ol>
+
+    <h2>Galería</h2>
+    <div style="display:flex; gap:10px; flex-wrap:wrap; justify-content:center;">
+        <img src="https://example.com/gabito-foto2.jpg" alt="Gabito en el estudio" style="width:200px; height:auto;">
+        <img src="https://example.com/gabito-foto3.jpg" alt="Gabito en vivo" style="width:200px; height:auto;">
+        <img src="https://example.com/gabito-foto4.jpg" alt="Portada de álbum" style="width:200px; height:auto;">
+    </div>
+
     <h2>Redes Sociales</h2>
     <ul>
         <li><a href="https://www.instagram.com/gabitoballesteros" target="_blank">Instagram</a></li>
         <li><a href="https://www.youtube.com/@GabitoBallesteros" target="_blank">YouTube</a></li>
+        <li><a href="https://twitter.com/gabitoballest" target="_blank">Twitter</a></li>
     </ul>
 </section>
 
