--- a/junior.html
+++ b/junior.html
@@ -14,20 +14,36 @@
 
 <section class="contenido">
     <h2>Información sobre Junior H</h2>
-    <p>Junior H es una de las voces más representativas de los corridos tumbados, con un estilo melancólico y relajado. Su música ha conectado con miles de jóvenes que buscan algo fresco y real en el género.</p>
-    
+    <p>Junior H, cuyo nombre real es Antonio Herrera Pérez, es uno de los artistas más influyentes del movimiento de corridos tumbados. Su estilo mezcla letras sinceras, melancólicas y sonidos urbanos, que conectan con la juventud actual.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Junior_H.jpg" alt="Junior H" width="300">
+
     <h2>Álbumes destacados</h2>
     <ul>
         <li>Atrapado en un Sueño (2020)</li>
         <li>Mi Vida en un Cigarro 2 (2021)</li>
         <li>$ad Boyz 4 Life II (2022)</li>
+        <li>Contingente (2023)</li>
+    </ul>
+
+    <h2>Canciones populares</h2>
+    <ul>
+        <li>Ella</li>
+        <li>Fin de Semana</li>
+        <li>Y LLORO</li>
+        <li>Intro (Sad Boyz 4 Life)</li>
+        <li>1004 KM</li>
     </ul>
 
     <h2>Redes Sociales</h2>
     <ul>
         <li><a href="https://www.instagram.com/juniorh" target="_blank">Instagram</a></li>
         <li><a href="https://www.youtube.com/@JuniorH" target="_blank">YouTube</a></li>
+        <li><a href="https://twitter.com/juniorh_oficial" target="_blank">Twitter</a></li>
     </ul>
+
+    <h2>Galería</h2>
+    <img src="https://i.scdn.co/image/ab6761610000e5eb4a86b26aa5acb5307d1b0031" alt="Junior H Álbum Cover" width="300">
+    <img src="https://pbs.twimg.com/media/FsCTlv7WwAEyzNc?format=jpg&name=medium" alt="Junior H en concierto" width="300">
 </section>
 
 <footer>
