--- a/tito.html
+++ b/tito.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
     <meta charset="UTF-8">
@@ -14,18 +13,33 @@
 
 <section class="contenido">
     <h2>Información sobre Tito Doble P</h2>
-    <p>Tito Doble P es uno de los nuevos talentos del movimiento, destacando por sus letras sinceras y su estilo auténtico. Ha ganado seguidores gracias a sus colaboraciones con otros exponentes de los corridos tumbados.</p>
+    <img src="https://via.placeholder.com/600x400?text=Tito+Doble+P" alt="Foto de Tito Doble P" style="width:100%; max-width:600px;">
+    <p>Tito Doble P es uno de los nuevos talentos del movimiento de los corridos tumbados, destacando por sus letras sinceras, estilo relajado y auténtico. Con raíces firmes en el regional mexicano y la calle, ha logrado conectar con miles de fans gracias a su forma de narrar experiencias reales y emocionales a través de sus canciones.</p>
     
     <h2>Álbumes destacados</h2>
     <ul>
-        <li>Tumbados y Firmes (2023)</li>
-        <li>Con Estilo Doble P (2024)</li>
+        <li><strong>Tumbados y Firmes</strong> (2023) - Un álbum que mezcla sonidos tradicionales con guitarras modernas y letras que hablan de la vida diaria y los sueños de barrio.</li>
+        <li><strong>Con Estilo Doble P</strong> (2024) - Consolidando su estilo con colaboraciones de artistas reconocidos del género.</li>
     </ul>
+
+    <h2>Éxitos Populares</h2>
+    <ul>
+        <li>"La Vida Es Dura"</li>
+        <li>"Barrio Firme"</li>
+        <li>"Lealtad y Respeto"</li>
+        <li>"Tumbando la Rutina"</li>
+    </ul>
+
+    <h2>Galería</h2>
+    <img src="https://via.placeholder.com/400x300?text=En+el+Estudio" alt="Tito Doble P en el estudio" style="width:100%; max-width:400px;">
+    <img src="https://via.placeholder.com/400x300?text=En+Concierto" alt="Tito Doble P en concierto" style="width:100%; max-width:400px;">
 
     <h2>Redes Sociales</h2>
     <ul>
         <li><a href="https://www.instagram.com/titodoblepp" target="_blank">Instagram</a></li>
         <li><a href="https://www.youtube.com/@TitoDobleP" target="_blank">YouTube</a></li>
+        <li><a href="https://www.tiktok.com/@titodoblepp" target="_blank">TikTok</a></li>
+        <li><a href="https://open.spotify.com/artist/titodoblepp" target="_blank">Spotify</a></li>
     </ul>
 </section>
 
