--- a/gabito.html
+++ b/gabito.html
@@ -17,7 +17,7 @@
     <h2>Información sobre Gabito Ballesteros</h2>
     <p>Gabito Ballesteros es un joven artista originario de Sonora, México, que ha destacado en el mundo de los corridos tumbados. Con su estilo relajado, letras pegajosas y colaboraciones con grandes exponentes del género como Natanael Cano, Peso Pluma y Junior H, ha logrado conectar con una nueva generación de oyentes que buscan un sonido fresco y auténtico.</p>
 
-    <img src="https://example.com/gabito-foto1.jpg" alt="Gabito Ballesteros en concierto" style="width:100%; max-width:600px; display:block; margin:20px auto;">
+    <img src="221fa70b92af517d2130e01e30194f79.jpg" alt="Gabito Ballesteros en concierto" style="width:100%; max-width:600px; display:block; margin:20px auto;">
 
     <h2>Álbumes destacados</h2>
     <ul>
