--- a/tito.html
+++ b/tito.html
@@ -13,7 +13,7 @@
 
 <section class="contenido">
     <h2>Información sobre Tito Doble P</h2>
-    <img src="https://via.placeholder.com/600x400?text=Tito+Doble+P" alt="Foto de Tito Doble P" style="width:100%; max-width:600px;">
+    <img src="7f6d7829f96c9f0d2519968757304b73.jpg" alt="Foto de Tito Doble P" style="width:100%; max-width:600px;">
     <p>Tito Doble P es uno de los nuevos talentos del movimiento de los corridos tumbados, destacando por sus letras sinceras, estilo relajado y auténtico. Con raíces firmes en el regional mexicano y la calle, ha logrado conectar con miles de fans gracias a su forma de narrar experiencias reales y emocionales a través de sus canciones.</p>
     
     <h2>Álbumes destacados</h2>
