--- a/junior.html
+++ b/junior.html
@@ -15,7 +15,7 @@
 <section class="contenido">
     <h2>Información sobre Junior H</h2>
     <p>Junior H, cuyo nombre real es Antonio Herrera Pérez, es uno de los artistas más influyentes del movimiento de corridos tumbados. Su estilo mezcla letras sinceras, melancólicas y sonidos urbanos, que conectan con la juventud actual.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Junior_H.jpg" alt="Junior H" width="300">
+    <img src="b637d5e3c212613a76f22b9f08d6fb35.jpg" alt="Junior H" width="300">
 
     <h2>Álbumes destacados</h2>
     <ul>
