--- a/junior.html
+++ b/junior.html
@@ -42,7 +42,7 @@
     </ul>
 
     <h2>Galería</h2>
-    <img src="https://i.scdn.co/image/ab6761610000e5eb4a86b26aa5acb5307d1b0031" alt="Junior H Álbum Cover" width="300">
+    <img src="42d037e98084e8414b895e6903616b99.jpg" alt="Junior H Álbum Cover" width="300">
     <img src="https://pbs.twimg.com/media/FsCTlv7WwAEyzNc?format=jpg&name=medium" alt="Junior H en concierto" width="300">
 </section>
 
