--- a/junior.html
+++ b/junior.html
@@ -43,7 +43,7 @@
 
     <h2>Galería</h2>
     <img src="42d037e98084e8414b895e6903616b99.jpg" alt="Junior H Álbum Cover" width="300">
-    <img src="https://pbs.twimg.com/media/FsCTlv7WwAEyzNc?format=jpg&name=medium" alt="Junior H en concierto" width="300">
+    <img src="40192656f9b842f4ac4370ce2d685183.jpg" alt="Junior H en concierto" width="300">
 </section>
 
 <footer>
