--- a/gabito.html
+++ b/gabito.html
@@ -35,7 +35,7 @@
 
     <h2>Galería</h2>
     <div style="display:flex; gap:10px; flex-wrap:wrap; justify-content:center;">
-        <img src="https://example.com/gabito-foto2.jpg" alt="Gabito en el estudio" style="width:200px; height:auto;">
+        <img src="c8d82c7d1d559486ae58e3c53d5644ff.jpg" alt="Gabito en el estudio" style="width:200px; height:auto;">
         <img src="https://example.com/gabito-foto3.jpg" alt="Gabito en vivo" style="width:200px; height:auto;">
         <img src="https://example.com/gabito-foto4.jpg" alt="Portada de álbum" style="width:200px; height:auto;">
     </div>
