--- a/gabito.html
+++ b/gabito.html
@@ -36,7 +36,7 @@
     <h2>Galería</h2>
     <div style="display:flex; gap:10px; flex-wrap:wrap; justify-content:center;">
         <img src="c8d82c7d1d559486ae58e3c53d5644ff.jpg" alt="Gabito en el estudio" style="width:200px; height:auto;">
-        <img src="https://example.com/gabito-foto3.jpg" alt="Gabito en vivo" style="width:200px; height:auto;">
+        <img src="a57419b8ec6188b90fedd8463f115797.jpg" alt="Gabito en vivo" style="width:200px; height:auto;">
         <img src="f57ab32c9bbc90b29828085ff882420a.jpg" alt="Portada de álbum" style="width:200px; height:auto;">
     </div>
 
