--- a/tito.html
+++ b/tito.html
@@ -31,7 +31,7 @@
     </ul>
 
     <h2>Galería</h2>
-    <img src="https://via.placeholder.com/400x300?text=En+el+Estudio" alt="Tito Doble P en el estudio" style="width:100%; max-width:400px;">
+    <img src="f7cb8c4c00b163a51247ea7b04b0ce77.jpg" alt="Tito Doble P en el estudio" style="width:100%; max-width:400px;">
     <img src="3b3cbe6ba3ea029a3933790f4b9fd0a1.jpg" alt="Tito Doble P en concierto" style="width:100%; max-width:400px;">
 
     <h2>Redes Sociales</h2>
