--- a/natanael.html
+++ b/natanael.html
@@ -43,10 +43,8 @@
     <h2>Redes Sociales Oficiales</h2>
     <ul>
         <li><a href="https://www.instagram.com/natanael_cano" target="_blank">Instagram</a></li>
-        <li><a href="https://twitter.com/natanaelc" target="_blank">Twitter</a></li>
         <li><a href="https://youtube.com/@natanaelcano777?si=WaOnAb4Jyoj4t8LD" target="_blank">YouTube</a></li>
-        <li><a href="https://www.facebook.com/NatanaelCanoOficial" target="_blank">Facebook</a></li>
-        <li><a href="https://open.spotify.com/artist/1xK59OXxi2ZgFJYvRQwrpT" target="_blank">Spotify</a></li>
+        <li><a href="https://open.spotify.com/artist/0elWFr7TW8piilVRYJUe4P?si=rkGMuah4TrutwaHdXR0QAw" target="_blank">Spotify</a></li>
     </ul>
 </section>
 
