--- a/junior.html
+++ b/junior.html
@@ -37,8 +37,7 @@
     <h2>Redes Sociales</h2>
     <ul>
         <li><a href="https://www.instagram.com/juniorh" target="_blank">Instagram</a></li>
-        <li><a href="https://www.youtube.com/@JuniorH" target="_blank">YouTube</a></li>
-        <li><a href="https://twitter.com/juniorh_oficial" target="_blank">Twitter</a></li>
+        <li><a href="https://youtube.com/@juniorh_oficial?si=B4IVCU-E99Am1ijm" target="_blank">YouTube</a></li>
     </ul>
 
     <h2>Galería</h2>
