--- a/tito.html
+++ b/tito.html
@@ -36,9 +36,8 @@
 
     <h2>Redes Sociales</h2>
     <ul>
-        <li><a href="https://www.instagram.com/titodoblepp" target="_blank">Instagram</a></li>
-        <li><a href="https://www.youtube.com/@TitoDobleP" target="_blank">YouTube</a></li>
-        <li><a href="https://www.tiktok.com/@titodoblepp" target="_blank">TikTok</a></li>
+        <li><a href="https://www.instagram.com/titodoublep?igsh=ejBvbTQydmdqajhi" target="_blank">Instagram</a></li>
+        <li><a href="https://youtube.com/@titodoublep?si=yuW4JVqXYmaO98Ho" target="_blank">YouTube</a></li>
         <li><a href="https://open.spotify.com/artist/titodoblepp" target="_blank">Spotify</a></li>
     </ul>
 </section>
