--- a/tito.html
+++ b/tito.html
@@ -38,7 +38,7 @@
     <ul>
         <li><a href="https://www.instagram.com/titodoublep?igsh=ejBvbTQydmdqajhi" target="_blank">Instagram</a></li>
         <li><a href="https://youtube.com/@titodoublep?si=yuW4JVqXYmaO98Ho" target="_blank">YouTube</a></li>
-        <li><a href="https://open.spotify.com/artist/titodoblepp" target="_blank">Spotify</a></li>
+        <li><a href="https://open.spotify.com/artist/5eumcnUkdmGvkvcsx1WFNG?si=HT3JCcJtRdyy-jwQB01AmQ" target="_blank">Spotify</a></li>
     </ul>
 </section>
 
