--- a/gabito.html
+++ b/gabito.html
@@ -43,7 +43,7 @@
     <h2>Redes Sociales</h2>
     <ul>
         <li><a href="https://www.instagram.com/gabitoballesteros" target="_blank">Instagram</a></li>
-        <li><a href="https://www.youtube.com/@GabitoBallesteros" target="_blank">YouTube</a></li>
+        <li><a href="https://youtube.com/@gabitoballesteros_?si=iYetVUXY9tPgHHnO" target="_blank">YouTube</a></li>
 </section>
 
 <footer>
