--- a/formulario.html
+++ b/formulario.html
@@ -1,5 +1,48 @@
 <html>
-  <body>
-    <h1>hola mundoooo </h1>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gera MXM</title>
+    <link rel="stylesheet" href="gera.css">
+</head>
+<body>
+
+<header class="header">
+    <h1 class="titulo-sitio">Gera MXM</h1>
+
+    <nav class="menu">
+        <select onchange="location = this.value;">
+            <option value="index.html">Corridos Tumbados</option>
+            <option value="formulario.html">Gera MXM</option>
+        </select>
+    </nav>
+</header>
+
+<main class="contenido">
+    <h2>El Flow Mexicano de Gera MXM</h2>
+    <p>Gera MXM, originario de Monterrey, Nuevo León, es una de las voces más influyentes en el rap mexicano, combinando letras profundas con ritmos urbanos y colaboraciones con artistas como Santa Fe Klan, Natanael Cano y más.</p>
+    
+    <section class="artistas">
+        <div class="artista">
+            <img src="gera.jpg" alt="Gera MXM">
+            <p>Gera MXM</p>
+            <small>Con un estilo que mezcla rap, corridos tumbados y sentimiento callejero, Gera se ha ganado el respeto en la escena latina.</small>
+        </div>
+    </section>
+
+    <h3>Top Canciones Recomendadas:</h3>
+    <ul style="list-style: none; padding: 0;">
+        <li>— Botella Tras Botella (ft. Christian Nodal)</li>
+        <li>— Nunca te pude alcanzar</li>
+        <li>— Si mañana no despierto</li>
+        <li>— Rumores (ft. Santa Fe Klan)</li>
+        <li>— El de la Codeína</li>
+    </ul>
+</main>
+
+<footer class="footer">
+    <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
+</footer>
+
+</body>
 </html>
