--- a/gabito.html
+++ b/gabito.html
@@ -1,5 +1,4 @@
 
-
 <html>
 <head>
     <meta charset="UTF-8">
@@ -33,6 +32,37 @@
         <li>Aquí Seguimos</li>
     </ol>
 
+    <h2>Colaboraciones importantes</h2>
+    <ul>
+        <li>Peso Pluma</li>
+        <li>Natanael Cano</li>
+        <li>Junior H</li>
+        <li>Fuerza Regida</li>
+    </ul>
+
+    <h2>Estilo musical</h2>
+    <p>Gabito fusiona los sonidos sierreños con toques de trap y reggaetón suave. Sus canciones son melódicas, con guitarras limpias y voces suaves, lo que lo diferencia dentro del movimiento tumbado como una propuesta más sentimental y relajada.</p>
+
+    <h2>Trayectoria</h2>
+    <p>Comenzó su carrera grabando desde casa y compartiendo su música en plataformas digitales. En poco tiempo, captó la atención de productores importantes y artistas establecidos. Gracias a su talento, ha logrado presentarse en escenarios importantes y entrar en listas de popularidad en Spotify y YouTube.</p>
+
+    <h2>Impacto en redes sociales</h2>
+    <p>Gabito se ha consolidado como una figura influyente entre jóvenes, con millones de seguidores y streams. En TikTok, sus canciones suelen volverse virales gracias a su letra emocional y estilo chill. Es un artista cercano con sus fans y muy activo en Instagram.</p>
+
+    <h2>Frases conocidas</h2>
+    <ul>
+        <li>"Soy de los que hacen ruido con estilo bajito."</li>
+        <li>"Relajado pero firme, así ando por la vida."</li>
+    </ul>
+
+    <h2>Discografía extendida</h2>
+    <ul>
+        <li>Del Barrio Hasta Aquí (2021)</li>
+        <li>Corridos y Relax (2022)</li>
+        <li>Éxitos Tumbados (2023)</li>
+        <li>Reflexiones Tumbadas (2024)</li>
+    </ul>
+
     <h2>Galería</h2>
     <div style="display:flex; gap:10px; flex-wrap:wrap; justify-content:center;">
         <img src="c8d82c7d1d559486ae58e3c53d5644ff.jpg" alt="Gabito en el estudio" style="width:200px; height:auto;">
@@ -40,10 +70,14 @@
         <img src="f57ab32c9bbc90b29828085ff882420a.jpg" alt="Portada de álbum" style="width:200px; height:auto;">
     </div>
 
+    <h2>Proyectos futuros</h2>
+    <p>Gabito planea lanzar un nuevo álbum colaborativo en 2025 y expandirse a escenarios internacionales. También se rumorea una gira junto a Junior H y Peso Pluma que recorrerá México, Estados Unidos y Latinoamérica.</p>
+
     <h2>Redes Sociales</h2>
     <ul>
         <li><a href="https://www.instagram.com/gabitoballesteros" target="_blank">Instagram</a></li>
         <li><a href="https://youtube.com/@gabitoballesteros_?si=iYetVUXY9tPgHHnO" target="_blank">YouTube</a></li>
+    </ul>
 </section>
 
 <footer>
@@ -52,3 +86,4 @@
 
 </body>
 </html>
+
