--- a/junior.html
+++ b/junior.html
@@ -15,7 +15,7 @@
 <section class="contenido">
     <h2>Información sobre Junior H</h2>
     <p>Junior H, cuyo nombre real es Antonio Herrera Pérez, es uno de los artistas más influyentes del movimiento de corridos tumbados. Su estilo mezcla letras sinceras, melancólicas y sonidos urbanos, que conectan con la juventud actual.</p>
-    <img src="b637d5e3c212613a76f22b9f08d6fb35.jpg" alt="Junior H" width="300">
+    <img src="b637d5e3c212613a76f22b9f08d6fb35.jpg" alt="Junior H" width="300" style="display:block; margin:20px auto;">
 
     <h2>Álbumes destacados</h2>
     <ul>
@@ -23,6 +23,7 @@
         <li>Mi Vida en un Cigarro 2 (2021)</li>
         <li>$ad Boyz 4 Life II (2022)</li>
         <li>Contingente (2023)</li>
+        <li>Sad Boyz Season (2024)</li>
     </ul>
 
     <h2>Canciones populares</h2>
@@ -32,7 +33,32 @@
         <li>Y LLORO</li>
         <li>Intro (Sad Boyz 4 Life)</li>
         <li>1004 KM</li>
+        <li>Se Amerita</li>
+        <li>Tronando Ligas (con Peso Pluma)</li>
     </ul>
+
+    <h2>Estilo musical</h2>
+    <p>Junior H destaca por sus letras introspectivas, tonos melancólicos y arreglos suaves de guitarra. Ha sido clave en darle al corrido tumbado una dimensión más emocional, creando una estética sonora conocida como “sad sierreño”.</p>
+
+    <h2>Colaboraciones importantes</h2>
+    <ul>
+        <li>Natanael Cano</li>
+        <li>Peso Pluma</li>
+        <li>Gabito Ballesteros</li>
+        <li>Ovi</li>
+    </ul>
+
+    <h2>Trayectoria</h2>
+    <p>Junior H comenzó publicando sus canciones en YouTube, y poco a poco fue ganando seguidores. Su autenticidad y estilo emocional lo hicieron destacar, firmando con Rancho Humilde y colaborando con los principales artistas del género. Hoy es una de las voces más representativas del movimiento.</p>
+
+    <h2>Frases destacadas</h2>
+    <ul>
+        <li>"No estoy triste, solo pensando."</li>
+        <li>"Con un cigarro y un trago, entiendo todo."</li>
+    </ul>
+
+    <h2>Proyectos futuros</h2>
+    <p>Junior H planea expandir su música con giras por Europa y colaboraciones con artistas del pop alternativo. Además, se espera un nuevo álbum con sonidos más experimentales para 2025.</p>
 
     <h2>Redes Sociales</h2>
     <ul>
@@ -41,8 +67,11 @@
     </ul>
 
     <h2>Galería</h2>
-    <img src="42d037e98084e8414b895e6903616b99.jpg" alt="Junior H Álbum Cover" width="300">
-    <img src="40192656f9b842f4ac4370ce2d685183.jpg" alt="Junior H en concierto" width="300">
+    <div style="display:flex; gap:10px; flex-wrap:wrap; justify-content:center; margin-top:15px;">
+        <img src="42d037e98084e8414b895e6903616b99.jpg" alt="Junior H Álbum Cover" style="width:200px; height:auto;">
+        <img src="40192656f9b842f4ac4370ce2d685183.jpg" alt="Junior H en concierto" style="width:200px; height:auto;">
+        <img src="juniorh_estudio.jpg" alt="Junior H en el estudio" style="width:200px; height:auto;">
+    </div>
 </section>
 
 <footer>
