--- a/tito.html
+++ b/tito.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
     <meta charset="UTF-8">
@@ -13,9 +14,12 @@
 
 <section class="contenido">
     <h2>Información sobre Tito Doble P</h2>
-    <img src="7f6d7829f96c9f0d2519968757304b73.jpg" alt="Foto de Tito Doble P" style="width:100%; max-width:600px;">
+    <img src="7f6d7829f96c9f0d2519968757304b73.jpg" alt="Foto de Tito Doble P" style="width:100%; max-width:600px; display:block; margin:auto;">
     <p>Tito Doble P es uno de los nuevos talentos del movimiento de los corridos tumbados, destacando por sus letras sinceras, estilo relajado y auténtico. Con raíces firmes en el regional mexicano y la calle, ha logrado conectar con miles de fans gracias a su forma de narrar experiencias reales y emocionales a través de sus canciones.</p>
-    
+
+    <h2>Estilo musical</h2>
+    <p>El estilo de Tito Doble P combina lo clásico de los corridos sierreños con elementos modernos como el trap y beats urbanos. Sus canciones reflejan una mezcla de humildad, lucha y superación, con una actitud firme que lo identifica como parte de la nueva escuela del género.</p>
+
     <h2>Álbumes destacados</h2>
     <ul>
         <li><strong>Tumbados y Firmes</strong> (2023) - Un álbum que mezcla sonidos tradicionales con guitarras modernas y letras que hablan de la vida diaria y los sueños de barrio.</li>
@@ -28,11 +32,23 @@
         <li>"Barrio Firme"</li>
         <li>"Lealtad y Respeto"</li>
         <li>"Tumbando la Rutina"</li>
+        <li>"Firmes y Reales"</li>
+    </ul>
+
+    <h2>Colaboraciones importantes</h2>
+    <ul>
+        <li>Peso Pluma</li>
+        <li>Natanael Cano</li>
+        <li>Gabito Ballesteros</li>
+        <li>Fuerza Regida</li>
     </ul>
 
     <h2>Galería</h2>
-    <img src="f7cb8c4c00b163a51247ea7b04b0ce77.jpg" alt="Tito Doble P en el estudio" style="width:100%; max-width:400px;">
-    <img src="3b3cbe6ba3ea029a3933790f4b9fd0a1.jpg" alt="Tito Doble P en concierto" style="width:100%; max-width:400px;">
+    <div style="display:flex; gap:10px; flex-wrap:wrap; justify-content:center; margin-top:15px;">
+        <img src="f7cb8c4c00b163a51247ea7b04b0ce77.jpg" alt="Tito Doble P en el estudio" style="width:200px; height:auto;">
+        <img src="3b3cbe6ba3ea029a3933790f4b9fd0a1.jpg" alt="Tito Doble P en concierto" style="width:200px; height:auto;">
+        <img src="tito_doblep_album.jpg" alt="Portada de álbum de Tito Doble P" style="width:200px; height:auto;">
+    </div>
 
     <h2>Redes Sociales</h2>
     <ul>
@@ -40,6 +56,15 @@
         <li><a href="https://youtube.com/@titodoublep?si=yuW4JVqXYmaO98Ho" target="_blank">YouTube</a></li>
         <li><a href="https://open.spotify.com/artist/5eumcnUkdmGvkvcsx1WFNG?si=HT3JCcJtRdyy-jwQB01AmQ" target="_blank">Spotify</a></li>
     </ul>
+
+    <h2>Frases representativas</h2>
+    <ul>
+        <li>"No nací en cuna de oro, pero nací con huevos."</li>
+        <li>"Del barrio, pero con visión."</li>
+    </ul>
+
+    <h2>Proyectos futuros</h2>
+    <p>Tito Doble P prepara un nuevo EP para finales de 2025, con temas que experimentarán con sonidos acústicos y fusiones con rap. También ha anunciado su primera gira por Estados Unidos.</p>
 </section>
 
 <footer>
