--- a/corridos.html
+++ b/corridos.html
@@ -1,5 +1,18 @@
 <html>
-  <body>
-    hola mundo
-  </body>
+  <head>
+      <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mundo musical</title>
+    <link rel="stylesheet" href="web.css">
+</head>
+<body>
+<nav>
+     <ul class="menu">
+         <li><a href="README.md">Inicio</a></li>
+     <li><a href="Corridos.html">Corridos</a></li>
+    <li><a href="trap.html">trap triste</a></li>
+     <li><a href="rap.html">hip-hop/rap</a></li>
+        </ul>
+</nav>
+  
 </html>
