--- a/natanael.html
+++ b/natanael.html
@@ -11,6 +11,15 @@
 <header>
     <h1 class="titulo-sitio">Natanael Cano</h1>
 </header>
+    <nav>
+     <ul class="menu">
+         <li><a href="README.md">Inicio</a></li>
+     <li><a href="natanael.html">Natanael Cano</a></li>
+    <li><a href="gabito.html">Gabito ballesteros</a></li>
+     <li><a href="tito.html">Tito Doublep</a></li>
+         <li><a href="junior.html">Junior h</a></li>
+        </ul>
+    </nav>
 
 <section class="contenido">
     <h2>¿Quién es Natanael Cano?</h2>
