--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mundo musical</title>
+    <link rel="stylesheet" href="web.css">
+</head>
+<body>
+<nav>
+     <ul class="menu">
+         <li><a href="README.md">Inicio</a></li>
+     <li><a href="natanael.html">Natanael Cano</a></li>
+    <li><a href="gabito.html">Gabito ballesteros</a></li>
+     <li><a href="tito.html">Tito Doublep</a></li>
+         <li><a href="junior.html">Junior h</a></li>
+        </ul>
+    </nav>
 
+<header class="header">
+    <h1 class="titulo-sitio">Mundo musical.</h1>
+    <p class="subtitulo animado"> Adéntrate en el mundo de la música sus diferentes estilos y letras, dónde conoceras a diferentes artistas que te harán ver el mundo de una manera diferente</p>
+</header>
+
+<main class="contenido">
+
+    <section class="historia-genero animado">
+        <h2>¿Qué es la musica?</h2>
+        <p>
+            La música es la combinación ordenada de ritmo, melodía y armonía que resulta agradable a los oídos. Por su carácter inmaterial, la música se considera un arte temporal o del tiempo, al igual que la literatura.</p><br>
+
+<p>En el sentido restrictivo, la música es el arte de coordinar y transmitir efectos sonoros, armoniosos y estéticamente válidos, los cuales son generados a través de la voz o de instrumentos musicales.</p><br>
+
+<p>La música es una manifestación artística y cultural de los pueblos, de manera que adquiere diversas formas, valores estéticos y funciones según su contexto. A la vez, es uno de los medios por el cual un individuo expresa sus sentimientos.</p><br>
+<p>La persona que pone en práctica la música o la ejecuta por medio de un instrumento se llama músico.
+            
+    </p>
+    <img src="b637d5e3c212613a76f22b9f08d6fb35.jpg" alt="Junior H">
+    </section>
+
+    <section class="introduccion animado">
+        <h2>Como comenzo la música.?</h2>
+        <p>
+         El origen de la música no ha podido ser determinado. Se estima que comenzó en la prehistoria de la humanidad, a partir de ritos religiosos y de apareamiento.</p><br>
+
+<p>La danza y el canto parecen haber estado desde el principio asociados a la comprensión del mundo. Formaban parte de manifestaciones religiosas o chamánicas, rituales de sanación, cantos de batalla o de cacería, o bailes para atraer la lluvia.</p><br>
+
+<p>El instrumento más antiguo encontrado hasta la fecha es la llamada flauta de Divje Babe, un fémur de oso de más de 43.000 años de antigüedad que presenta dos perforaciones circulares alineadas.</p><br>
+
+<p>La primera canción de la que se tiene registro es un fragmento musical escrito en cuneiforme en Sumeria en el año 1400 a. C. En esta civilización existían instrumentos de percusión y de cuerdas
+        </p>
+    </section>
+    <div class="corridos">
+    <img src="7ab6e190c1567ab869d15dbc4985446d.jpg" alt="artista">
+    <p> Algunos artistas han destacado en el genero debido a sus letras plasmando en sus canciones, lo que los ha llevado a la cima de ser reconocidos en américa latina, estos artistas han marcado una nueva era en la historia de la música </p>
+    </div>
+
+    </main>
+
+<footer class="footer animado">
+    <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
+    <p>Desarrollado por amantes del regional con alma urbana.</p>
+</footer>
+<script src="animaciones.js"></script>
+
+</body>
+</html>                
