--- a/junior.html
+++ b/junior.html
@@ -13,7 +13,7 @@
 </header>
     <nav>
      <ul class="menu">
-         <li><a href="README.md">Inicio</a></li>
+         <li><a href="README.html">Inicio</a></li>
      <li><a href="natanael.html">Natanael Cano</a></li>
     <li><a href="gabito.html">Gabito ballesteros</a></li>
      <li><a href="tito.html">Tito Doublep</a></li>
