--- a/README.html
+++ b/README.html
@@ -18,8 +18,8 @@
     </nav>
 
 <header class="header">
-    <h1 class="titulo-sitio">Mundo musical.</h1>
-    <p class="subtitulo animado"> Adéntrate en el mundo de la música sus diferentes estilos y letras, dónde conoceras a diferentes artistas que te harán ver el mundo de una manera diferente</p>
+    <h1 class="titulo-sitio">Musica urbana.</h1>
+    <p class="subtitulo animado"> Adéntrate en el mundo de la música sus diferentes estilos y letras, dónde conoceras a varios artitas del género corridos tumbados incluyendo al artista Gera mxm del genero hip-hop/rap siendo un artista reconocido</p>
 </header>
 
 <main class="contenido">
@@ -27,11 +27,11 @@
     <section class="historia-genero animado">
         <h2>¿Qué es la musica?</h2>
         <p>
-            La música es la combinación ordenada de ritmo, melodía y armonía que resulta agradable a los oídos. Por su carácter inmaterial, la música se considera un arte temporal o del tiempo, al igual que la literatura.</p><br>
+            La música es la combinación ordenada de ritmo, melodía y armonía que resulta agradable a los oídos. Por su carácter inmaterial, la música se considera un arte temporal o del tiempo, al igual que la literatura.</p>
 
-<p>En el sentido restrictivo, la música es el arte de coordinar y transmitir efectos sonoros, armoniosos y estéticamente válidos, los cuales son generados a través de la voz o de instrumentos musicales.</p><br>
+<p>En el sentido restrictivo, la música es el arte de coordinar y transmitir efectos sonoros, armoniosos y estéticamente válidos, los cuales son generados a través de la voz o de instrumentos musicales.</p>
 
-<p>La música es una manifestación artística y cultural de los pueblos, de manera que adquiere diversas formas, valores estéticos y funciones según su contexto. A la vez, es uno de los medios por el cual un individuo expresa sus sentimientos.</p><br>
+<p>La música es una manifestación artística y cultural de los pueblos, de manera que adquiere diversas formas, valores estéticos y funciones según su contexto. A la vez, es uno de los medios por el cual un individuo expresa sus sentimientos.</p>
 <p>La persona que pone en práctica la música o la ejecuta por medio de un instrumento se llama músico.
             
     </p>
@@ -41,18 +41,19 @@
     <section class="introduccion animado">
         <h2>Como comenzo la música.?</h2>
         <p>
-         El origen de la música no ha podido ser determinado. Se estima que comenzó en la prehistoria de la humanidad, a partir de ritos religiosos y de apareamiento.</p><br>
+         El origen de la música no ha podido ser determinado. Se estima que comenzó en la prehistoria de la humanidad, a partir de ritos religiosos y de apareamiento.</p>
 
-<p>La danza y el canto parecen haber estado desde el principio asociados a la comprensión del mundo. Formaban parte de manifestaciones religiosas o chamánicas, rituales de sanación, cantos de batalla o de cacería, o bailes para atraer la lluvia.</p><br>
+<p>La danza y el canto parecen haber estado desde el principio asociados a la comprensión del mundo. Formaban parte de manifestaciones religiosas o chamánicas, rituales de sanación, cantos de batalla o de cacería, o bailes para atraer la lluvia.</p>
 
-<p>El instrumento más antiguo encontrado hasta la fecha es la llamada flauta de Divje Babe, un fémur de oso de más de 43.000 años de antigüedad que presenta dos perforaciones circulares alineadas.</p><br>
+<p>El instrumento más antiguo encontrado hasta la fecha es la llamada flauta de Divje Babe, un fémur de oso de más de 43.000 años de antigüedad que presenta dos perforaciones circulares alineadas.</p>
 
 <p>La primera canción de la que se tiene registro es un fragmento musical escrito en cuneiforme en Sumeria en el año 1400 a. C. En esta civilización existían instrumentos de percusión y de cuerdas
         </p>
     </section>
     <div class="corridos">
     <img src="7ab6e190c1567ab869d15dbc4985446d.jpg" alt="artista">
-    <p> Algunos artistas han destacado en el genero debido a sus letras plasmando en sus canciones, lo que los ha llevado a la cima de ser reconocidos en américa latina, estos artistas han marcado una nueva era en la historia de la música </p>
+    <p> Que son los corridos tumbados.? </p>
+        <p> </p>
     </div>
 
     <section class="artistas-destacados animado">
