--- a/README.html
+++ b/README.html
@@ -52,7 +52,8 @@
     </section>
     <div class="corridos">
     <img src="7ab6e190c1567ab869d15dbc4985446d.jpg" alt="artista">
-    <p> Que son los corridos tumbados.? </p>
+    <section class="cuento">
+        <p> Que son los corridos tumbados.? </p>
         <p>
             Muchos no lo saben, pero los elementos de la polka y la música folclórica fueron introducidos a México por europeos en la década de 1830. El sonido de la guitarra y el acordeón fue adaptado por la gente del pueblo, haciéndose música propia. Artistas como Narciso Martínez recuerdan haber escuchado polka desde que eran niños. Con el tiempo, algunos músicos comenzaron a sustituir los instrumentos de latón por otros sonidos, al mismo tiempo que usaban las letras para contar sus propias historias. Estas canciones, muchas veces utilizadas para dar noticias durante la Revolución Mexicana, se conocieron como boleros mexicanos, una base fundamental para los géneros que vendrían después.
         </p>
@@ -70,54 +71,14 @@
         <p>
             Mientras los corridos tradicionales se estancaban, el Gangsta Rap se generalizó y, respaldado por las discográficas más grandes, se convirtió en un fenómeno popular. Con la llegada de la música trap, los jóvenes artistas mexicanos se sintieron atraídos por la energía y las influencias urbanas del trap y el hip-hop, lo que permitió una nueva fusión. Estos artistas adaptaron las letras de los corridos a los ritmos del trap, creando lo que hoy conocemos como "Corridos Tumbados".
         </p>
+    </section>
     </div>
 
     <section class="artistas-destacados animado">
         <h2>Artistas Destacados</h2>
-        <div class="artistas">
+        
 
-            <div class="artista animado">
-                <a href="natanael.html">
-                    <img src="fd3e9c4b1f556b61a53a59ad157a1691.jpg" alt="Natanael Cano">
-                </a>
-                <h3>Natanael Cano</h3>
-                <p>
-                    Considerado el pionero del género, Natanael ha roto barreras con su estilo irreverente. Su fusión de corridos con trap ha marcado un antes y un después en la música mexicana contemporánea.
-                </p>
-            </div>
-
-            <div class="artista animado">
-                <a href="gabito.html">
-                    <img src="221fa70b92af517d2130e01e30194f79.jpg" alt="Gabito Ballesteros">
-                </a>
-                <h3>Gabito Ballesteros</h3>
-                <p>
-                    Con una voz distintiva y una habilidad para conectar con la juventud, Gabito ha escalado rápidamente en la escena. Sus temas versátiles van desde lo romántico hasta lo reflexivo.
-                </p>
-            </div>
-
-            <div class="artista animado">
-                <a href="tito.html">
-                    <img src="7f6d7829f96c9f0d2519968757304b73.jpg" alt="Tito Doble P">
-                </a>
-                <h3>Tito Doble P</h3>
-                <p>
-                    Uno de los nombres emergentes más potentes del sello La Doble P. Tito aporta flow, presencia escénica y letras que retratan realidades actuales con frescura.
-                </p>
-            </div>
-
-            <div class="artista animado">
-                <a href="junior.html">
-                    <img src="b637d5e3c212613a76f22b9f08d6fb35.jpg" alt="Junior H">
-                </a>
-                <h3>Junior H</h3>
-                <p>
-                    Maestro de los corridos melancólicos, Junior H ha conquistado corazones con su estilo introspectivo. Su autenticidad lo convierte en uno de los más respetados del movimiento.
-                </p>
-            </div>
-
-        </div>
-    </section>
+            
 
 </main>
 
